Output mappings, added coffee-redux

--- a/app/app.jade
+++ b/app/app.jade
@@ -8,6 +8,9 @@
 					= " "
 	.row
 		.span6
-			pre: code.original
+			pre: code.original Original source code
 		.span6
-			pre: code.generated
+			pre: code.generated Generated code
+	.row
+		.span12
+			pre: code.mappings List of mappings
