multiple source files, custom mode is linkable, removed boring examples

--- a/app/app.jade
+++ b/app/app.jade
@@ -7,6 +7,8 @@
 					a(href="#"+kind).btn.example(data-example=kind)= kind
 					= " "
 				a(href="#custom-choose").btn.custom custom...
+				= " "
+				a.custom-link
 	.row
 		.span6
 			pre: code.original Original source code
