--- a/app/custom-step3.jade
+++ b/app/custom-step3.jade
@@ -11,7 +11,7 @@ p
 	= sourceMap.mappings.length
 	| )
 h4 Step 3
-p Provide original source file:
+p Provide original source file "<b>#{source}</b>":
 p
 	input.input.file(type="file")
 	button.btn.btn-primary.custom-continue Load
