Try to display org source side to side with gen source
by inserting new lines and sorting sources by pos

--- a/app/app.less
+++ b/app/app.less
@@ -25,3 +25,13 @@ span.selected {
 .style-4 {
 	background: #FFAAFF;
 }
+
+pre {
+	overflow-x: auto;
+}
+
+pre code {
+	white-space: pre;
+	word-break: normal;
+	word-wrap: normal;
+}
