upload on change, link to dnded files, note about dnd fixes #5

--- a/app/app.jade
+++ b/app/app.jade
@@ -6,7 +6,7 @@
 				each kind in kinds
 					a(href="#"+kind).btn.example(data-example=kind)= kind
 					= " "
-				a(href="#custom-choose").btn.custom custom...
+				a(href="#custom-choose", title="You can also drag'n'drop all files into this page").btn.custom custom...
 				= " "
 				a.custom-link
 	.row
