--- a/app/app.jade
+++ b/app/app.jade
@@ -1,19 +1,20 @@
-.container
-	.row
-		.span12
-			h1 source-map-visualization
-			p
-				each kind in kinds
-					a.btn.example(href="#"+kind, data-example=kind)= kind
-					= " "
-				a(href="#custom-choose", title="You can also drag'n'drop all files into this page").btn.custom custom...
+.full-screen
+	header
+		h1 source-map-visualization
+		p
+			each kind in kinds
+				a.btn.example(href="#"+kind, data-example=kind)= kind
 				= " "
-				a.custom-link
-pre: code.visu
-.custom-modal.modal.fade.hide
-	.modal-header
-		a.close(data-dismiss="modal") &times;
-		h3 Custom SourceMap
-	.modal-body
-	.model-footer
-		.alert.alert-error.custom-error.hide
+			a(href="#custom-choose", title="You can also drag'n'drop all files into this page").btn.custom custom...
+			= " "
+			a.custom-link
+			button(title="Minimize the file with uglify-js and combine the SourceMaps.").btn.btn-primary minimize
+	main
+	footer
+	.custom-modal.modal.fade.hide
+		.modal-header
+			a.close(data-dismiss="modal") &times;
+			h3 Custom SourceMap
+		.modal-body
+		.model-footer
+			.alert.alert-error.custom-error.hide
