visual and ux improvements i like.

--- a/app/app.less
+++ b/app/app.less
@@ -73,7 +73,7 @@ header .btn-primary {
 }
 
 span.original-item {
-	border-left: 1px solid black;
+	// border-left: 1px solid black;
 	margin: 1px;
 	min-width: 3px;
 }
@@ -85,19 +85,19 @@ span.selected {
 	color: white;
 }
 .style-0 {
-	background: #FFFF66;
+	background: hsl(291.1, 46%, 87%);
 }
 .style-1 {
-	background: #FFFFFF;
+	background: hsl(198.9, 92%, 88%);
 }
 .style-2 {
-	background: #FFBBBB;
+	background: hsl(122, 37%, 89%);
 }
 .style-3 {
-	background: #AAFFFF;
+	background: hsl(53.8, 51%, 82%);
 }
 .style-4 {
-	background: #FFAAFF;
+	background: hsl(14.4, 31%, 82%);
 }
 
 pre {
