--- a/app/app.less
+++ b/app/app.less
@@ -1,3 +1,15 @@
+.scrollbar-style {
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: hsla(0, 0%, 56%, 0.6);
+    }
+    &:hover::-webkit-scrollbar-thumb {
+        background-color: hsla(0, 0%, 25%, 0.6);
+    }
+}
+
 // flexbox mixins
 .flex-container {
 	display: flex;
@@ -6,6 +18,7 @@
 	> * {
 	flex: 0 0 auto;
 	overflow: scroll;
+    .scrollbar-style;
 	}
 }
 
@@ -40,6 +53,9 @@ body {
 			.stretchy;
 			width: 50%;
 		}
+        > *:first-child {
+            margin-right: 5px;
+        }
 	}
 }
 
@@ -84,11 +100,27 @@ span.selected {
 	background: #FFAAFF;
 }
 
+pre {
+    border-radius: 0;
+}
 pre code {
 	white-space: pre-wrap;
 	word-break: normal;
 	word-wrap: normal;
 }
+
+main, footer {
+    h3 {
+        font-size: 16px;
+        line-height: 1;
+        margin: 0;
+        padding: 2px 6px;
+        color: rgb(255, 255, 255);
+        font-weight: normal;
+        background: rgba(0, 0, 0, 0.15);
+    }
+}
+
 
 table {
 	width: 100%;
