--- a/app/app.jade
+++ b/app/app.jade
@@ -9,6 +9,9 @@
 			= " "
 			a.custom-link
 			button(title="Minimize the file with uglify-js and combine the SourceMaps.").btn.btn-primary minimize
+		small
+			made with ♡ by sokra & paulirish. &nbsp;
+			a(href="https://github.com/sokra/source-map-visualization/") repo
 	main
 	footer
 	.custom-modal.modal.fade.hide
