--- a/app/app.less
+++ b/app/app.less
@@ -121,6 +121,11 @@ main, footer {
     }
 }
 
+header small {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
 
 table {
 	width: 100%;
