--- a/app/app.less
+++ b/app/app.less
@@ -61,6 +61,7 @@ body {
 
 header {
 	height: 120px;
+	padding: 10px;
 }
 
 footer {
@@ -68,7 +69,7 @@ footer {
 }
 
 
-header .btn-primary {
+header .btn-info {
 	float: right;
 }
 
@@ -117,7 +118,7 @@ main, footer {
         padding: 2px 6px;
         color: rgb(255, 255, 255);
         font-weight: normal;
-        background: rgba(0, 0, 0, 0.15);
+        background: hsla(0, 0%, 9%, 0.22);
     }
 }
 
