UI polish. remove progress bars. standardize on 'generated'

--- a/app/app.jade
+++ b/app/app.jade
@@ -8,7 +8,7 @@
 			a(href="#custom-choose", title="You can also drag'n'drop all files into this page").btn-primary.btn.custom custom...
 			= " "
 			a.custom-link
-			button(title="Minify the compiled JS with uglify-js and combine the SourceMaps.").btn.btn-info.js-minify minify compiled
+			button(title="Minify the generated JS with uglify-js and combine the SourceMaps.").btn.btn-info.js-minify minify generated
 		small
 			span made with ♡ by sokra & paulirish. &nbsp;
 			a(href="https://github.com/sokra/source-map-visualization/") repo
