--- a/app/custom-step1.jade
+++ b/app/custom-step1.jade
@@ -1,8 +1,7 @@
+div.alert.alert-info Note: You can drag 'n drop your generated/map files onto the app.
+
 h4 Step 1
 p Provide generated code file:
 p
 	input.input.file(type="file")
-	p Note: You can also drag 'n drop these files onto the page.
 	button.btn.btn-primary.custom-continue Load
-.progress.progress-striped.active
-	.bar.read-progress(style="width: 0%")
