--- a/app/custom-drag.jade
+++ b/app/custom-drag.jade
@@ -1,5 +1,3 @@
 h4 Drag'n'Drop
 p Drop all files anywhere to load them
-p The SourceMap must have the extension ".map". ".json" is acceptable too if it's the only json file.
-.progress.progress-striped.active
-	.bar.read-progress(style="width: 0%")
+p The SourceMap must have the extension ".map", though ".json" is acceptable if it's the only json file.
