--- a/app/app.less
+++ b/app/app.less
@@ -4,6 +4,7 @@
     }
     &::-webkit-scrollbar-thumb {
         background-color: hsla(0, 0%, 56%, 0.6);
+        border-radius: 50px;
     }
     &:hover::-webkit-scrollbar-thumb {
         background-color: hsla(0, 0%, 25%, 0.6);
@@ -60,7 +61,6 @@ body {
 }
 
 header {
-	height: 120px;
 	padding: 10px;
 }
 
@@ -118,7 +118,12 @@ main, footer {
         padding: 2px 6px;
         color: rgb(255, 255, 255);
         font-weight: normal;
-        background: hsla(0, 0%, 9%, 0.22);
+		background: hsla(0, 0%, 9%, 0.22);
+		border: 1px solid hsla(0, 0%, 50%, 0.5);
+		border-left: 0;
+		border-right: 0;
+		position: sticky;
+		top: 0;
     }
 }
 
